Bug 233363 - KWin crashes in DesktopGridEffect::windowInputMouseEvent
Summary: KWin crashes in DesktopGridEffect::windowInputMouseEvent
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-window-management (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
: 267562 277971 281553 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-04-05 17:02 UTC by Leandro Santiago da Silva
Modified: 2011-09-07 17:16 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.6.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Leandro Santiago da Silva 2010-04-05 17:02:38 UTC
Application: kwin (4.4.2 (KDE 4.4.2))
KDE Platform Version: 4.4.2 (KDE 4.4.2)
Qt Version: 4.6.2
Operating System: Linux 2.6.31-21-generic x86_64
Distribution: Ubuntu 9.10

-- Information about the crash:
KWin crashed after some strange behaviors with window groups (gimp tools). Before the gimp test, it was working fine.

 -- Backtrace:
Application: KWin (kwin), signal: Segmentation fault
The current source language is "auto; currently c".
[KCrash Handler]
#5  0x00007f16ce3cc230 in vtable for QPixmap () from /usr/lib/libQtGui.so.4
#6  0x00007f16b8b8288b in KWin::DesktopGridEffect::windowInputMouseEvent (this=0x9ee2d0, e=<value optimized out>) at ../../../kwin/effects/desktopgrid/desktopgrid.cpp:463
#7  0x00007f16d15fc055 in KWin::EffectsHandlerImpl::checkInputWindowEvent (this=<value optimized out>, e=<value optimized out>) at ../../kwin/effects.cpp:817
#8  0x00007f16d15a5052 in KWin::Workspace::workspaceEvent (this=0x874ac0, e=0x7fff0fab4dd0) at ../../kwin/events.cpp:260
#9  0x00007f16d1582db8 in KWin::Application::x11EventFilter (this=0x7fff0fab51c0, e=0x7fff0fab4dd0) at ../../kwin/main.cpp:361
#10 0x00007f16cd99f3b1 in qt_x11EventFilter (ev=0x7fff0fab4dd0) at kernel/qapplication_x11.cpp:399
#11 0x00007f16cd9adec1 in QApplication::x11ProcessEvent (this=<value optimized out>, event=0x7fff0fab4dd0) at kernel/qapplication_x11.cpp:3231
#12 0x00007f16cd9da322 in x11EventSourceDispatch (s=0x7a7cc0, callback=<value optimized out>, user_data=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:146
#13 0x00007f16c7ba6bce in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#14 0x00007f16c7baa598 in ?? () from /lib/libglib-2.0.so.0
#15 0x00007f16c7baa6c0 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#16 0x00007f16cd205333 in QEventDispatcherGlib::processEvents (this=0x78abe0, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:412
#17 0x00007f16cd9d9f0e in QGuiEventDispatcherGlib::processEvents (this=0xfa7750, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#18 0x00007f16cd1da732 in QEventLoop::processEvents (this=<value optimized out>, flags=) at kernel/qeventloop.cpp:149
#19 0x00007f16cd1dab0c in QEventLoop::exec (this=0x7fff0fab5100, flags=) at kernel/qeventloop.cpp:201
#20 0x00007f16cd1de84b in QCoreApplication::exec () at kernel/qcoreapplication.cpp:981
#21 0x00007f16d158461e in kdemain (argc=<value optimized out>, argv=<value optimized out>) at ../../kwin/main.cpp:526
#22 0x00007f16d11e4abd in __libc_start_main (main=<value optimized out>, argc=<value optimized out>, ubp_av=<value optimized out>, init=<value optimized out>, fini=<value optimized out>, 
    rtld_fini=<value optimized out>, stack_end=0x7fff0fab56c8) at libc-start.c:220
#23 0x0000000000400679 in _start () at ../sysdeps/x86_64/elf/start.S:113

Reported using DrKonqi
Comment 1 Martin Flöser 2010-04-06 08:07:12 UTC
Just to confirm what the backtrace tells me: were you using the desktop grid effect at the time of the crash and were you moving a window? In that case is it possible that the window closed while you moved it?
Comment 2 Leandro Santiago da Silva 2010-04-06 14:26:01 UTC
(In reply to comment #1)
> Just to confirm what the backtrace tells me: were you using the desktop grid
> effect at the time of the crash and were you moving a window? In that case is
> it possible that the window closed while you moved it?

Yes, I was using that effect. The chash happened after I try do group some gimp tools windows. 

When I did it, the windows stopped to response (they were there, but the window actions (move, clicks, etc.) didn't work anymore. I think I tryied to use grid effect at this moment, and it crashed (but I'm not sure). 

Now I can't remember if I closed or not gimp windows before use grid. Sorry :-)

And I'm using lastest fglrx driver.
Comment 3 Martin Flöser 2010-08-28 10:51:10 UTC
The crashtrace does not make sense at all. It's crashing in kwin here:

if( isUsingPresentWindows() && windowMove->isOnAllDesktops() )

and the next item in the crashtrace is QPixmap. Neither of the two methods called in the if statement access QPixmap.

We have a whole bunch of strange backtraces and they all have a referrence to glib and Ubuntu. Somehow I fear there is a pattern in it...
Comment 4 Martin Flöser 2011-03-18 19:20:02 UTC
*** Bug 267562 has been marked as a duplicate of this bug. ***
Comment 5 Thomas Lübking 2011-04-03 22:46:15 UTC
Git commit 0c23185cfd2b0210d58af603b94813a5473a547d by Thomas Lübking.
Committed on 07/03/2011 at 18:38.
Pushed by luebking into branch 'master'.

validate deleted moving window in desktop grid effect

BUG:233363
CCBUG:267562

M  +2    -0    kwin/effects/desktopgrid/desktopgrid.cpp     

http://commits.kde.org/kde-workspace/0c23185cfd2b0210d58af603b94813a5473a547d
Comment 6 Thomas Lübking 2011-04-13 20:53:03 UTC
Git commit a56c26346c2041cd6f5036101012aa4a7718e2eb by Thomas Lübking.
Committed on 13/04/2011 at 20:57.
Pushed by luebking into branch 'KDE/4.6'.

validate deleted moving window in desktop grid effect

BUG:233363
FIXED-IN:4.6.3

M  +2    -0    kwin/effects/desktopgrid/desktopgrid.cpp     

http://commits.kde.org/kde-workspace/a56c26346c2041cd6f5036101012aa4a7718e2eb
Comment 7 Thomas Lübking 2011-07-17 20:12:18 UTC
*** Bug 277971 has been marked as a duplicate of this bug. ***
Comment 8 Christoph Feck 2011-09-07 17:16:01 UTC
*** Bug 281553 has been marked as a duplicate of this bug. ***