validate deleted moving window in desktop grid effect

BUG:233363
CCBUG:267562